# toy-renderer

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  README.md  msvc_build.bat
toy_tracer/: CMakeLists.txt  common.h  toy_tracer.cpp
toy_tracer/color/: spectrum.cpp  spectrum.h
toy_tracer/core/: ResourceManager.cpp  ResourceManager.h  camera.cpp  camera.h  common.h  cubemap.cpp  cubemap.h  cubematrix.cpp  cubematrix.h  depthmap.cpp  depthmap.h  film.cpp  film.h  filter.h  frustum.cpp  frustum.h  geometry.cpp  geometry.h  glTFLoader.cpp  glTFLoader.h  image.cpp  image.h  integrator.h  interaction.h  light.h  material.cpp  material.h  microfacet.cpp  microfacet.h  normgen.cpp  normgen.h  octree.cpp  octree.h  pathtracer.cpp  primitive.cpp  primitive.h  profiler.cpp  profiler.h  ray.h  renderoption.h  (+23 more)
toy_tracer/engine/: controller.cpp  controller.h
toy_tracer/ext/assimp/lib_x64/: assimp_32.lib  assimpd.lib
toy_tracer/ext/freetype-2.10.1/: CMakeLists.txt
toy_tracer/ext/glad/include/glad/: glad.h
toy_tracer/ext/glad/src/: glad.c
toy_tracer/ext/std_image/src/: lodepng.cpp  stb_image_impl.cpp
toy_tracer/light/: area.cpp  area.h  point.cpp  point.h  skybox.cpp  skybox.h
toy_tracer/main/: MainWindow.cpp  MainWindow.h  ResourceManager.cpp  ResourceManager.h  TwoThreadQueue.cpp  TwoThreadQueue.h  ball.cpp  canvas.cpp  canvas.h  lightinput.h  main.cpp  mainwindow.ui  meshgen.cpp  normgen.cpp  renderworker.cpp  renderworker.h  scene_object.cpp  scene_object.h  toy_tracer.cpp  toy_tracer.h  uiwrapper.cpp  uiwrapper.h
toy_tracer/shader/: 2dchar.fs  2dchar.gs  2dchar.vs  2dcharControl.vs  2dcharSimple.fs  2dcharprepass.fs  csm.gs  cubemap.gs  depth.fs  depthGS.fs  difference.fs  empty.fs  faceNormalGen.vs  fullscreen.vs  gaussianBlurH.fs  gaussianBlurV.fs  gentangene.fs  gentangene.gs  hdr_tonemap.fs  image.fs  pbr_nonormal.glsl  pbr_pixel.glsl  pixel.glsl  point.fs  point.vs  posAndTex.vs  screenTransform.vs  shader.cpp  shader.h  skybox.fs  skybox.vs  taa.fs  text.fs  vertex.glsl  vertexInstance.vs  vertexInstanceShadow.vs  vertexLocalFlatten.vs  vertexShadow.glsl
toy_tracer/shape/: flatcube.cpp  flatcube.h  rectangular.cpp  rectangular.h  triangle.cpp  triangle.h
toy_tracer/tests/: main.cpp  test_interaction_transform.cpp
toy_tracer/texture/: checkerboard.cpp  checkerboard.h
toy_tracer/tracer/: film.cpp  film.h  interaction.h  microfacet.cpp  microfacet.h  ray.h  spectrum.cpp
toy_tracer/utils/: array.h  rendertext.cpp  utils.cpp  utils.h
